[tool.poetry]
name = "Osmium"
version = "1.0.0"
description = "An alternative backend for Iridium"
authors = ["lilmayofuksu"]

[tool.poetry.dependencies]
python = "^3.10"
betterproto = {version = "^2.0.0b5", extras = ["compiler"]}
loguru = "^0.6.0"
requests = "^2.28.1"
websockets = "^10.4"
grpcio-tools = "^1.50.0"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"